Update /statistics/delays to include carriers
